HIS/force-app/main/default/objects/Hotel_Taj__c/Hotel_Taj__c.object-meta.xml
<CustomObject>
    <label>HOTEL</label>
    <nameField>
        <displayFormat>Room No: {000}</displayFormat>
        <label>Hotel Taj</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HOTELS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>