HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HOTELS</relationshipLabel>
    <relationshipName>HOTELS</relationshipName>
    <type>Lookup</type>
</CustomField>