HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HOTELS</relationshipLabel>
    <relationshipName>HOTELS</relationshipName>
    <type>Lookup</type>
</CustomField>