HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Reservation start date</description>
    <label>Reservation</label>
    <type>Date</type>
</CustomField>