HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Reservation_End__c.field-meta.xml
<CustomField>
    <fullName>Reservation_End__c</fullName>
    <defaultValue>TODAY() + 3</defaultValue>
    <description>Reservation End Date</description>
    <label>Reservation End</label>
    <type>Date</type>
</CustomField>