HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>HOTELS</relationshipLabel>
    <relationshipName>HOTELS</relationshipName>
    <type>Lookup</type>
</CustomField>