HIS/force-app/main/default/objects/Hotel_Taj__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <description>List types of room</description>
    <label>Rooms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELUXE ROOM CITY VIEW KING BED</fullName>
                <default>true</default>
                <label>DELUXE ROOM CITY VIEW KING BED</label>
            </value>
            <value>
                <fullName>DELUXE ROOM SEA VIEW KING BED</fullName>
            </value>
            <value>
                <fullName>APOLLO ROOM SEA VIEW KING BED</fullName>
            </value>
            <value>
                <fullName>APOLLO SUITE SEA VIEW KING BED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>